Repair broken css

--- a/app/assets/stylesheets/antakyahome_full_screen.css
+++ b/app/assets/stylesheets/antakyahome_full_screen.css
@@ -11,7 +11,6 @@
 
 /*-------------------------------------------------------------------------------------------------------------------------------------------*/
   /*Fejléc*/
-  header {background-image: }
   h2 {
     font-size: 5em;
     text-align: center;
